--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@account-kit/core": "^4.35.1",
     "@account-kit/infra": "^4.35.1",
     "@account-kit/react": "^4.35.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.50.1",
